--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "tsc && node dist/index.js",
+    "start": "tsc && node build/index.js",
     "build": "tsc",
     "test": "tsc && mocha ./sources/*/test/*.js"
   },
